--- a/src/components/Battle/Battle.css
+++ b/src/components/Battle/Battle.css
@@ -4,6 +4,7 @@
     height: 300px;
     border: 7px solid #F5C23E;
     margin: 10px 50px;
+    
   
     
 }
@@ -12,6 +13,7 @@
     background-color: white;
     cursor: pointer;
     transform:scale(1.2);
+    transition: all;
     border: 7px solid #F5C23E;
     border-radius: 10px;
     margin-bottom: 20px;
@@ -44,11 +46,29 @@ height: 300px;
     margin-top: 10px;
     border: 2px solid #F5C23E;
     border-radius: 10px;
+    text-align: center;
     font-size: 20px;
     text-transform: uppercase;
     width: auto;
 }
 
-.roundButton{
-    cursor: pointer;
+.match-btn{
+    margin-top: 30px;
+  background-color: black;
+    color: #F5C23E;
+    border-radius: 50px;
+  text-align: center;
+  padding: 14px 56px;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 20px;
+  text-transform: uppercase;
+  border: 1px solid #F5C23E;
+  cursor: pointer;
 }
+
+.match-btn:hover{
+    background-color: #F5C23E;
+    color: black; 
+    border-radius: 50px;
+    }
