--- a/src/components/Gallery/HamsterCard.css
+++ b/src/components/Gallery/HamsterCard.css
@@ -1,98 +1,43 @@
 
 
-.hamsterCard {
+
+
+
+
+
+.hamster-image {
+
+    display: block;
+    height: 300px;
+    height: 300px;
+    background-size: cover;
+   
+    border: 5px solid black;
+
+
+}
+
+
+
+.hamster-information {
+    
+    color: #F5C23E;
+    text-transform: uppercase;
+    margin-top: -20px;
+    background-color: black;
+    border: 3px solid black ;
+    border-radius: 20px;
+    line-height: 150%;
+   
+
+}
+
+.hamster-card {
 
     width: 300px;
     height: 300px;
     padding: 20px;
-    color: white;
-    text-shadow: 0 0 10px black;
-
-}
-
-h2{
-    text-align: center;
-}
-
-
-.hamsterCardImg {
-
-    display: block;
-
-    height: 300px;
-
-    height: 300px;
-
-    background-size: cover !important;
-
-    transition: 666ms all ease-in-out;
-
-    border: 2px solid white;
-
-    filter: grayscale(40%);
-
 }
 
 
 
-.hamsterCardImg p {
-
-    text-align: center;
-
-    font-weight: bold;
-
-}
-
-
-
-.hamster-info {
-
-    filter: opacity(0);
-
-    height: 100%;
-
-    width: 100%;
-
-    transition: 333ms all ease-in-out;
-
-    transform: scale(1);
-
-    position: absolute;
-
-    top: 0;
-
-}
-
-.hamster-info:hover {
-
-    filter: opacity(100%);
-
-    transform: scale(1);
-
-    transition: 333ms all ease-in-out;
-
-    backdrop-filter: blur(4px);
-
-}
-
-
-
-.hamsterCardImg:hover {
-
-    transform: scale(1.1);
-
-    transition: 333ms all ease-in-out;
-
-    cursor: pointer;
-
-}
-
-
-
-.hamster-info-footer {
-
-    max-width: 300px;
-
-    line-height: 25px;
-
-}
