--- a/src/components/Gallery/NewHamster.css
+++ b/src/components/Gallery/NewHamster.css
@@ -1,25 +1,62 @@
 .form-container{
-    background-color: #fff;
-}
-.newhamsterdiv{
+    background-color:  #F5C23E;
     display: flex;
     justify-content: center;
-
-align-items: center;
-    background-color: #fff;
+    align-items: center;
+    flex-direction: column;
+    height: 500px;
 }
 
-.newhamsterdiv2{
+
+
+
+
+
+.container-input input{
     display: flex;
-    justify-content: center;
-height: 500px;
-width: 500px;
-align-items: center;
-    background-color: #fff;
-}
-
-.App{
+    flex-direction: column;
+    width: 500px;
+    height: 50px;
+    margin-top: 10px;
+    border-radius: 20px;
+    background-color: rgb(226, 224, 107);
+    border: 3px solid black;
    
-    text-align: center;
 }
 
+::placeholder{
+    color: black;
+    font-size: 15px;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+input[type=text]{
+    text-align: center;
+    outline: none;
+    resize: none;
+    
+}
+
+
+
+.addHamster-button{
+    margin-top: 30px;
+  background-color: black;
+    color: #F5C23E;
+    border-radius: 50px;
+  text-align: center;
+  padding: 14px 56px;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 20px;
+  text-transform: uppercase;
+  border: 1px solid #F5C23E;
+  cursor: pointer;
+ 
+}
+.addHamster-button:hover{
+background-color: #ddd;
+color: black; 
+border-radius: 50px;
+}
