--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -19,21 +19,23 @@ h2{
     
 }
 
-button{
-   background-color: #F5C23E;
-   height:30px;
-   display: flex;
-   justify-content: center;
-   width: 250px;
-   border-radius: 100px;
-   border: 2px solid black;
-   font-size: 20px;
-   text-transform: uppercase;
-   font-weight: 100;
-}
-
-button:hover{
-background-color: white;
-color: black;
-
-}
+.begin-btn{
+    margin-top: 30px;
+    background-color: black;
+      color: #F5C23E;
+      border-radius: 50px;
+    text-align: center;
+    padding: 14px 56px;
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 20px;
+    text-transform: uppercase;
+    border: 1px solid #F5C23E;
+    cursor: pointer;
+  }
+  
+  .begin-btn:hover{
+      background-color:#F5C23E;
+      color: black; 
+      border-radius: 50px;
+      }
