--- a/src/components/Gallery/Gallery.css
+++ b/src/components/Gallery/Gallery.css
@@ -50,7 +50,8 @@
     height:40px;
     font-size: 25px;
     font-weight: 100;
-    margin-bottom: -20px;
+    margin: -15px 5px 15px 250px;
+    
     border: 1px solid #F5C23E;
     border-radius: 10px;
    
