--- a/src/components/Gallery/NewHamster.css
+++ b/src/components/Gallery/NewHamster.css
@@ -28,7 +28,8 @@
     color: black;
     font-size: 15px;
     text-align: center;
-    text-transform: uppercase;
+    font-weight: 800;
+    
 }
 
 input[type=text]{
